--- a/s3_template.yaml
+++ b/s3_template.yaml
@@ -10,7 +10,7 @@ Resources:
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Ref BucketName
+      BucketName: kakeibo-bucket-1123
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
