Add KakeiboBucketName output to S3 template

--- a/s3_template.yaml
+++ b/s3_template.yaml
@@ -38,3 +38,8 @@ Outputs:
   WebsiteURL:
     Description: URL of the S3 static website
     Value: !GetAtt WebsiteBucket.WebsiteURL
+  KakeiboBucketName:
+    Value: !Ref WebsiteBucket
+    Export:
+      Name: KakeiboBucket-Name
+
