Add AWS Cloudformation Deployment file for dynamo-stack-v2 stack

--- a/parameters/00_parameters.yaml
+++ b/parameters/00_parameters.yaml
@@ -1,3 +1,3 @@
-template-file-path: s3_template.yaml
-parameters:
-  BucketName: kakeibo-bucket-1123
+template-file-path: DynamoDB_template.yaml
+parameters: {}
+tags: {}
