Change template file path to s3_template.yaml

--- a/parameters/00_parameters.yaml
+++ b/parameters/00_parameters.yaml
@@ -1,4 +1,4 @@
-template-file-path: DynamoDB_template.yaml
+template-file-path: s3_template.yaml
 parameters:
   BucketName: kakeibo-bucket-1123
 tags: {}
