--- a/DynamoDB/deployment.yaml
+++ b/DynamoDB/deployment.yaml
@@ -1,5 +1,5 @@
 cloudformation:
-  template: template.yaml
-  parameters: parameter.yaml
-  stackName: kakeibo-stack
+  template: DynamoDB/template.yaml
+  parameters: DynamoDB/parameter.yaml
+  stackName: testest
   region: ap-northeast-1
