--- a/Lambda_template.yaml
+++ b/Lambda_template.yaml
@@ -24,8 +24,9 @@ Resources:
                 Action:
                   - dynamodb:Query
                   - dynamodb:PutItem
-                Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
-                  TableName: !ImportValue KakeiboTableName
+                Resource: !Sub
+                  - "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
+                  - TableName: !ImportValue KakeiboTableName
               - Effect: Allow
                 Action:
                   - s3:GetObject
