--- a/ApiGateway_template.yaml
+++ b/ApiGateway_template.yaml
@@ -21,8 +21,9 @@ Resources:
       Type: COGNITO_USER_POOLS
       IdentitySource: method.request.header.Authorization
       RestApiId: !Ref KakeiboApi
-      ProviderARNs:
-        - !ImportValue KakeiboUserPoolId
+      ProviderARNs:!Sub
+        - arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${UserPoolId}
+        - UserPoolId: !ImportValue KakeiboUserPoolId
 
   KakeiboApiMethodGet:
     Type: AWS::ApiGateway::Method
