--- a/ApiGateway_template.yaml
+++ b/ApiGateway_template.yaml
@@ -51,8 +51,8 @@ Resources:
       Integration:
         Type: AWS_PROXY
         IntegrationHttpMethod: POST
-        Uri:
-          - !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${KakeiboLambdaArn}/invocations
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${KakeiboLambdaArn}/invocations
           - KakeiboLambdaArn: !ImportValue KakeiboLambdaArn
 
   LambdaApiPermission:
