--- a/ApiGateway_template.yaml
+++ b/ApiGateway_template.yaml
@@ -21,7 +21,7 @@ Resources:
       Type: COGNITO_USER_POOLS
       IdentitySource: method.request.header.Authorization
       RestApiId: !Ref KakeiboApi
-      ProviderARNs: !Sub
+      ProviderARNs: - !Sub
         - arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${UserPoolId}
         - UserPoolId: !ImportValue KakeiboUserPoolId
 
